--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-    <h1 class="large-padding center-text">The Score Counter</h1>
+    <div class="large-padding center-content">
+        <h1 class="center-text">The Score Counter</h1>
+        <h2 class="center-text">Please select a game to play</h2>
+    </div>
 
     <div class="large-padding horizontal-orientation center-content">
         <a href="pool.html">Pool</a>
