WIP card implementation

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="EN" class="dark">
+<html lang="EN" class="white">
 
 <head>
     <title>Score</title>
@@ -19,12 +19,12 @@
         <h2 class="center-text">Please select a game to play</h2>
     </div>
 
-    <div class="large-padding horizontal-orientation center-content">
-        <a href="pool.html">Pool</a>
-        <a href="darts.html" class="not-implemented">Darts</a>
+    <div class="large-padding stretch horizontal-orientation center-content">
+        <game-card href="pool.html" img="images/billiards.jpg" title="Billiards"></game-card>
+        <game-card href="darts.html" img="images/darts.jpg" title="Darts" class="not-implemented"></game-card>
     </div>
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 
 </html>
