Improve card layout

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,9 @@
 <body>
     <div class="large-padding center-content">
         <h1 class="center-text">The Score Counter</h1>
-        <h2 class="center-text">Please select a game to play</h2>
     </div>
 
-    <div class="large-padding stretch horizontal-orientation center-content">
+    <div class="cards">
         <game-card href="pool.html" img="images/billiards.jpg" title="Billiards"></game-card>
         <game-card href="darts.html" img="images/darts.jpg" title="Darts" class="not-implemented"></game-card>
     </div>
