--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <div class="large-padding center-content">
-        <h1 class="center-text">The Score Counter</h1>
+    <div class="top-bar">
+        <button click="gotoHome()">🏠</button>
+        <h1 class="stretch center-text">The Score Counter</h1>
+        <button>⁝</button>
     </div>
 
     <div class="cards">
