--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,11 @@
         <button>⁝</button>
     </div>
 
+    <score-row name="Mattias" score="0"></score-row>
+    <score-row name="Petterson" score="5"></score-row>
+    <score-row name="Niko" score="-7"></score-row>
+    <score-row name="Oscar" score="42"></score-row>
+
     <div class="cards">
         <game-card href="pool.html" img="images/billiards.jpg" title="Billiards"></game-card>
         <game-card href="darts.html" img="images/darts.jpg" title="Darts" class="not-implemented"></game-card>
