--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,26 @@
 
 <body>
     <div class="top-bar">
-        <button click="gotoHome()">🏠</button>
-        <h1 class="stretch center-text">The Score Counter</h1>
+        <button click="gotoHome()">⬅</button>
+        <h1 class="stretch center-text">Round 1</h1>
         <button>⁝</button>
     </div>
-
     <score-row name="Mattias" score="0"></score-row>
     <score-row name="Petterson" score="5"></score-row>
     <score-row name="Niko" score="-7"></score-row>
     <score-row name="Oscar" score="42"></score-row>
 
+
+    <!-- <div class="top-bar">
+        <button click="gotoHome()">🏠</button>
+        <h1 class="stretch center-text">The Score Counter</h1>
+        <button>⁝</button>
+    </div>
+
     <div class="cards">
         <game-card href="pool.html" img="images/billiards.jpg" title="Billiards"></game-card>
         <game-card href="darts.html" img="images/darts.jpg" title="Darts" class="not-implemented"></game-card>
-    </div>
+    </div> -->
 
     <script src="index.js" type="module"></script>
 </body>
