Add leader styling

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <score-row name="Mattias" score="0"></score-row>
     <score-row name="Petterson" score="5"></score-row>
     <score-row name="Niko" score="-7"></score-row>
-    <score-row name="Oscar" score="42"></score-row>
+    <score-row name="Oscar" score="42" class="leader""></score-row>
 
 
     <!-- <div class="top-bar">
